@@ -35,5 +35,7 @@ wc_RKmedoids=RKmedoids,
 wc_RClusterQualSimple=RClusterQualSimple,
 wc_RClusterQualSimpleBoot=RClusterQualSimpleBoot,
 wc_RClusterQual=RClusterQual,
+wc_RClusterQualKendallFactory=RClusterQualKendallFactory,
+wc_RClusterQualKendall=RClusterQualKendall,
 wc_RClusterComputeIndivASW=RClusterComputeIndivASW
 )
