@@ -1,3 +1,9 @@
+              CHANGES IN WeightedCluster VERSION 1.1
+NEW FEATURES
+  o as.clustrange(), wcKMedRange(): Speed and memory handling improvements.
+
+BUG FIXES
+  o wcKMedRange() was internally converting dist objects to matrix. This isn't the case anymore.  
               CHANGES IN WeightedCluster VERSION 1.0
 
 NEW FEATURES
